[metadata]
name = nlridge
version = 0.0.1
author = Sebastien Herbreteau
author_email = sebastien.herbreteau@inria.fr
license = GNU AFFERO GENERAL PUBLIC LICENSE
url = https://github.com/sherbret/NL-Ridge/
description = Image denoising
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: GNU AFFERO GENERAL PUBLIC LICENSE
project_urls =
    Bug Tracker = https://github.com/sherbret/NL-Ridge/issues
    Documentation = https://github.com/sherbret/NL-Ridge#README.md
    Source Code = https://github.com/sherbret/NL-Ridge/
    User Support = https://github.com/sherbret/NL-Ridge/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    torch==1.12.0
    torchvision==0.13
